뷰단 파일 업로드, 프로필 변경 csrf 적용 - navbar 템플릿 레이아웃 수정